cmake_minimum_required(VERSION 4.0)
project(LeetcodeSolution)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetcodeSolution
        Contest/AlternatingGroup.cpp
        Contest/AlternatingGroupII.cpp
        Contest/FindMinimumOperationstoMakeAllElementsDivisiblebyThree.cpp
        Contest/FindtheWinningPlayerinCoinGame.cpp
        Contest/MaximumPointsAfterEnemyBattles.cpp
        Contest/MinimumAverageofSmallestandLargestElements.cpp
        Contest/MinimumOperationstoMakeBinaryArrayElementsEqualtoOneI.cpp
        Easy/BinarySearch.cpp
        Easy/CrawlerLogFolder.cpp
        Easy/FindCenterofStarGraph.cpp
        Easy/IntersectionofTwoArrays.cpp
        Easy/IntersectionofTwoArraysII.cpp
        Easy/LuckyNumbersinaMatrix.cpp
        Easy/NumberofStudentsUnabletoEatLunch.cpp
        Easy/PassthePillow.cpp
        Easy/ValidParentheses.cpp
        Easy/WaterBottles.cpp
        Medium/FindtheMinimumAreatoCoverAllOnesI.cpp
        Medium/GrumpyBookstoreOwner.cpp
        Medium/LargestNumber.cpp
        Medium/LongestConsecutiveSequence.cpp
        Medium/MergeNodesinBetweenZeros.cpp
        Medium/MinimumNumberofDaystoMakemBouquets.cpp
        Medium/MinimumOperationstoMakeBinaryArrayElementsEqualtoOneII.cpp
        Medium/MostProfitAssigningWork.cpp
        Medium/ReorderList.cpp
        Medium/ReverseWordsinaString.cpp
        Medium/RotateList.cpp
        Medium/SumofSquareNumbers.cpp
        Medium/TopKFrequentElements.cpp
        Medium/TwoSumIIInputArrayIsSorted.cpp
        Medium/ValidSudoku.cpp
        HelloWorld.cpp)
